@@ -3,7 +3,6 @@ package com.yahoo.vespa.clustercontroller.core;
 
 import com.yahoo.document.FixedBucketSpaces;
 import com.yahoo.exception.ExceptionUtils;
-import com.yahoo.jrt.ListenFailedException;
 import com.yahoo.vdslib.distribution.ConfiguredNode;
 import com.yahoo.vdslib.state.ClusterState;
 import com.yahoo.vdslib.state.Node;
@@ -32,7 +31,6 @@ import java.time.Instant;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -85,6 +83,7 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
     private final List<ClusterStateBundle> convergedStates = new ArrayList<>();
     private final Queue<RemoteClusterControllerTask> remoteTasks = new LinkedList<>();
     private final MetricUpdater metricUpdater;
+    private final LegacyIndexPageRequestHandler indexPageRequestHandler;
 
     private boolean isMaster = false;
     private boolean inMasterMoratorium = false;
@@ -99,7 +98,7 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
     // Legacy behavior is an empty set of explicitly configured bucket spaces, which means that
     // only a baseline cluster state will be sent from the controller and no per-space state
     // deriving is done.
-    private Set<String> configuredBucketSpaces = Collections.emptySet();
+    private final Set<String> configuredBucketSpaces = Set.of(FixedBucketSpaces.defaultSpace(), FixedBucketSpaces.globalSpace());
 
     public FleetController(FleetControllerContext context,
                            Timer timer,
@@ -143,9 +142,10 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
         this.statusRequestRouter.addHandler(
                 "^/clusterstate",
                 new ClusterStateRequestHandler(stateVersionTracker));
+        this.indexPageRequestHandler = new LegacyIndexPageRequestHandler(timer, cluster, masterElectionHandler, stateVersionTracker, eventLog, options);
         this.statusRequestRouter.addHandler(
                 "^/$",
-                new LegacyIndexPageRequestHandler(timer, cluster, masterElectionHandler, stateVersionTracker, eventLog, options));
+                indexPageRequestHandler);
 
         propagateOptions();
     }
@@ -168,7 +168,7 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
                 options.nodeStateRequestTimeoutLatestPercentage(),
                 options.nodeStateRequestRoundTripTimeMaxSeconds());
         var database = new DatabaseHandler(context, new ZooKeeperDatabaseFactory(context), timer, options.zooKeeperServerAddress(), timer);
-        var lookUp = new SlobrokClient(context, timer);
+        var lookUp = new SlobrokClient(context, timer, options.slobrokConnectionSpecs());
         var stateGenerator = new StateChangeHandler(context, timer, log);
         var stateBroadcaster = new SystemStateBroadcaster(context, timer, timer);
         var masterElectionHandler = new MasterElectionHandler(context, options.fleetControllerIndex(), options.fleetControllerCount(), timer, timer);
@@ -487,10 +487,10 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
             cluster.setSlobrokGenerationCount(0);
         }
 
-        configuredBucketSpaces = Set.of(FixedBucketSpaces.defaultSpace(), FixedBucketSpaces.globalSpace());
         stateVersionTracker.setMinMergeCompletionRatio(options.minMergeCompletionRatio());
 
         communicator.propagateOptions(options);
+        indexPageRequestHandler.propagateOptions(options);
 
         if (nodeLookup instanceof SlobrokClient) {
             ((SlobrokClient) nodeLookup).setSlobrokConnectionSpecs(options.slobrokConnectionSpecs());
@@ -513,13 +513,7 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
 
         if (rpcServer != null) {
             rpcServer.setMasterElectionHandler(masterElectionHandler);
-            try{
-                rpcServer.setSlobrokConnectionSpecs(options.slobrokConnectionSpecs(), options.rpcPort());
-            } catch (ListenFailedException e) {
-                context.log(logger, Level.WARNING, "Failed to bind RPC server to port " + options.rpcPort() + ". This may be natural if cluster has altered the services running on this node: " + e.getMessage());
-            } catch (Exception e) {
-                context.log(logger, Level.WARNING, "Failed to initialize RPC server socket: " + e.getMessage());
-            }
+            rpcServer.setSlobrokConnectionSpecs(options.slobrokConnectionSpecs(), options.rpcPort());
         }
 
         try {
@@ -625,7 +619,7 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
             if (tickStopTime >= tickStartTime) {
                 metricUpdater.addTickTime(tickStopTime - tickStartTime, didWork);
             }
-            // Always sleep some to use avoid using too much CPU and avoid starving waiting threads
+            // Always sleep some to avoid using too much CPU and avoid starving waiting threads
             monitor.wait(didWork || waitingForCycle ? 1 : options.cycleWaitTime());
             if ( ! isRunning()) { return; }
             tickStartTime = timer.getCurrentTimeInMillis();
@@ -686,7 +680,7 @@ public class FleetController implements NodeListener, SlobrokListener, SystemSta
         }
         boolean sentAny = false;
         // Give nodes a fair chance to respond first time to state gathering requests, so we don't
-        // disturb system when we take over. Allow anyways if we have states from all nodes.
+        // disturb system when we take over. Allow anyway if we have states from all nodes.
         long currentTime = timer.getCurrentTimeInMillis();
         if ((currentTime >= firstAllowedStateBroadcast || cluster.allStatesReported())
             && currentTime >= nextStateSendTime)
